Shrink entire game screen by 20% to make it look better on lower resolution screens. Also dropped the font in the status text at the top to prevent wrap around. This closes issue #77

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -12,7 +12,7 @@ h1 {
   border-bottom: 1px solid #1d4088;
   color: #6495ED;
   background: #ffffff;
-  font-size: 25px;
+  font-size: 18px;
   margin: 0 0 15px 0;
   padding-bottom: 5px;
   opacity:0.9;
@@ -30,13 +30,13 @@ h1 {
   font-size: 15px;
   margin: 0 auto;
   opacity:0.9;
-  width: 700px;
+  width: 560px;
 }
 
 #story
 {
- height: 350px;
- width: 500px;
+ height: 280px;
+ width: 400px;
  font-family: "Trebuchet MS", Helvetica, sans-serif
  font-size: 14px;
  overflow-y: scroll;
@@ -48,24 +48,24 @@ h1 {
 #wrapper {
   float: left;
   background: #ffffff;
-  width: 510px;
+  width: 408px;
   opacity:0.9;
 }
 
 #userbar {
   float: right;
   position: relative;
-  top: 40px;
+  top: 32px;
   background: #ffffff;
-  width: 180px;
-  height: 654px;
+  width: 144px;
+  height: 523px;
 }
 
 #end_early_button_area {
   float: right;
   position: relative;
   background: #ffffff;
-  width: 180lpx;
+  width: 144px;
 }
 
 #userbartext {
